--- a/stilus.css
+++ b/stilus.css
@@ -33,21 +33,20 @@ header {
 nav {
     grid-area: n;
     background-color: rgb(51, 51, 51);
-    /*padding: 5px;*/    
+    /*padding: 5px;*/
 }
 
 nav ul {
     display: grid;
     list-style-type: none;
     grid-template-columns: 1fr 1fr 10fr;
-    text-align: center;       
+    text-align: center;
 }
 
 nav ul li {
     padding-left: 0;
     border-right: 1px solid white;
-    padding: 10px  
-    
+    padding: 10px
 }
 
 nav ul li a {
@@ -64,11 +63,11 @@ nav ul li a:hover {
 article {
     grid-area: a;
     background-color: rgb(221, 221, 221);
-    
+
     display: grid;
     grid-template-columns: 2fr 1fr;
-    grid-template-areas: 
-    "s k";
+    grid-template-areas:
+        "s k";
     text-align: justify;
     gap: 5px;
     padding: 10px;
@@ -82,8 +81,9 @@ article section h1 {
 
 section {
     grid-area: s;
-    list-style-type: circle;  
+    list-style-type: circle;
 }
+
 section ul {
     padding-left: 30px;
     list-style-type: square;
@@ -94,11 +94,7 @@ section * {
 }
 
 .kep {
-    grid-area: k;
-}
-
-img {
-    max-width: 300px;
+    grid-area: k;    
     float: right;
 }
 
@@ -108,35 +104,72 @@ footer {
     grid-area: f;
     text-align: center;
     background-color: rgb(251, 166, 0);
-    
+
 }
 
 /*TÁBLÁZAT*/
+
 table {
-    
     width: 100%;
-    border-collapse: collapse;    
+    border-collapse: collapse;
 }
-td, th {
+
+td,
+th {
     border: 1px solid black;
     color: black;
+
 }
+
+td:hover {
+    background-color: brown
+}
+
+th:hover {
+    background-color: brown
+}
+
 thead {
     text-align: center;
-    font-weight: bold;    
+    font-weight: bold;
 }
+
+tbody {
+    text-align: center;
+}
+
 th {
     font-size: 15px;
 }
 
-tbody tr:nth-child(even){
-    background-color:rgb(121, 116, 116);
-    
+tbody tr:nth-child(even) {
+    background-color: rgb(121, 116, 116);
+
 }
-thead tr:nth-child(odd){
+
+thead tr:nth-child(odd) {
     background-color: rgb(121, 116, 116);
 }
 
-
-
 /*Responzivitás*/
+@media screen and (max-width: 700px) {
+    main {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-areas:
+            "h"
+            "n"
+            "a"
+            "f";
+    }
+    article {
+        grid-template-columns: 1fr;
+        grid-template-areas:
+            "s"          
+            "k";
+    }
+    .kep {
+        text-align: center;
+    }
+    
+}
